[package]
name = "wang-garden"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wang"
path = "src/lib.rs"

[[bin]]
name = "game"
path = "src/game.rs"

[[bin]]
name = "editor"
path = "src/editor.rs"

[dependencies]
glow = "0.11.0"
glutin = "0.24"
glam = "0.19.0"
rand = "0.8.4"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0"